fix filling alignment

--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ button:hover {
   .filler {
     width: 600px;
     height: 600px;
+    margin-top: 1000px;
   }
   .media-container {
     
